--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li class="active"><a href="index.html">Home Page</a></li>
+							<li><a href="generic.html">About Me</a></li>
+							<li><a href="elements.html">My Projects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/evan-bai-792a96222/" target="_blank" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
