Changed names of projects

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<article>
 									<header>
 										<h2><a href="#">Project 1<br />
-										ipsum faucibus</a></h2>
+										My Portfolio</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -74,7 +74,7 @@
 								<article>
 									<header>
 										<h2><a href="#">Project 2<br />
-										imperdiet lorem</a></h2>
+										U-GO University Program Analysis App</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -85,7 +85,7 @@
 								<article>
 									<header>
 										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										Virtual Rolex</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
